<resources>
    <string name="app_name">Let\'s cube Timer</string>
    <string name="copyright" translatable="false">
        © 2016 LET\'S CUBE TIMER\nSOME RIGHTS RESERVED
    </string>
    <string name="activity_loading_loading">Loading</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="send">Send</string>
    <string name="delete">Delete</string>
    <string name="validate">Validate</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="ok">Ok</string>
    <string name="timer_default_text">Press to start</string>
    <string name="timer_inspecting">Inspection</string>
    <string name="timer_solving">Solve</string>
    <string name="onboarding_step1_home_title">Precise to the millisecond</string>
    <string name="onboarding_step1_home_desc">Measure your performance with accuracy.</string>
    <string name="onboarding_step2_record_title">Records detection</string>
    <string name="onboarding_step2_record_desc">Be alerted when you beat a new record.</string>
    <string name="onboarding_step2_record_single">single</string>
    <string name="onboarding_step3_analytics_title">Improvement follow-up</string>
    <string name="onboarding_step3_analytics_desc">Analyze your performance improvement in the long term.</string>
    <string name="onboarding_step4_theme_title">App customization</string>
    <string name="onboarding_step4_theme_desc">Choose your favorite colour to personalize your app</string>
    <string name="onboarding_step5_access_title1">Choose a theme</string>
    <string name="onboarding_step5_access_title2">How did you know this app?</string>
    <string name="onboarding_step5_access_desc20">Youtube</string>
    <string name="onboarding_step5_access_desc21">Forum</string>
    <string name="onboarding_step5_access_desc22">Acquaintance </string>
    <string name="onboarding_step5_access_desc23">Play store</string>
    <string name="onboarding_step5_access_desc24">Other :</string>
    <string name="onboarding_step_title">Step %1$d/%2$d</string>
    <string name="time_weird_dialog_title">Strange time</string>
    <string name="time_weird_dialog_message_low">
        Your time (%1$ss) seems to much good, do you want to keep it?
    </string>
    <string name="time_weird_dialog_message_high">
        Your time (%1$ss) seems to much bad, do you want to keep it?
    </string>
    <string name="time_weird_dialog_button_keep">Keep it</string>
    <string name="time_weird_dialog_button_delete">Delete</string>
    <string name="default_name_first_session">Session 1</string>
    <string name="home_info_unavailable">Coming soon!</string>
    <string name="login_name_desc">Name :</string>
    <string name="login_name_hint">Nickname</string>
    <string name="login_email_desc">Email :</string>
    <string name="login_email_hint">Email</string>
    <string name="login_info_name_empty">name missing.</string>
    <string name="login_info_email_invalid">Invalid email adress.</string>
    <string name="login_button">Access  the timer</string>
    <string name="settings_title_timer">Timer :</string>
    <string name="settings_inspection">Inspection</string>
    <string name="settings_title_design">Design :</string>
    <string name="settings_dialog_theme_title">Theme</string>
    <string name="settings_dialog_theme_message">Choose your favorite color :</string>
    <string name="settings_theme_orange">Orange</string>
    <string name="settings_theme_orange_light">Light orange</string>
    <string name="settings_theme_blue">Blue</string>
    <string name="settings_theme_cyan">Cyan</string>
    <string name="settings_theme_green">Green</string>
    <string name="settings_theme_green_light">Light green</string>
    <string name="settings_theme_yellow">Yellow</string>
    <string name="settings_theme_red">Red</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_dialog_background_title">Timer background</string>
    <string name="settings_background">Timer background</string>
    <string name="settings_background_white">White</string>
    <string name="settings_background_black">Black</string>
    <string name="settings_timer_update_dialog_title">Timer update</string>
    <string name="settings_timer_update">Timer update</string>
    <string name="settings_timer_update_desc_no">Don\'t show time</string>
    <string name="settings_timer_update_millisecond">Every 0.001s</string>
    <string name="settings_timer_update_hundredth">Every 0.01s</string>
    <string name="settings_timer_update_tenth">Every 0.1s</string>
    <string name="settings_timer_update_second">Every 1s</string>
    <string name="settings_timer_home_content">Home content</string>
    <string name="settings_timer_home_content_dialog_title">Home content</string>
    <string name="settings_timer_home_content_nothing">Nothing</string>
    <string name="settings_timer_home_content_averages">Averages</string>
    <string name="settings_timer_home_content_pattern">Pattern</string>
    <string name="settings_timer_home_content_chart_line">Chart times</string>
    <string name="settings_timer_home_content_chart_histogram">Chart distribution</string>
    <string name="settings_timer_record_alert">Record alert</string>
    <string name="settings_title_help">Help :</string>
    <string name="settings_help_scramble">How to scramble the %1$s?</string>
    <string name="settings_help_app">How to use this app?</string>
    <string name="settings_title_contact">Contact :</string>
    <string name="settings_contact">Send message to the developer</string>
    <string name="settings_contact_dialog_title">Contact</string>
    <string name="settings_contact_dialog_desc">Enter what you want to say to the developer
        (update idea, new settings options, opinions about the app...),
        the message will be see in the day and understand by the developer
        (your message will be replied by mail) :
    </string>
    <string name="settings_contact_dialog_hint">max. 250</string>
    <string name="settings_support">Support developper for free</string>
    <string name="settings_support_not_loaded">The ad is not loaded,
        please turn on wifi or try again in few seconds!</string>
    <string name="settings_support_thanks">Thanks you for your support!</string>
    <string name="settings_rate">Rate it on google play</string>
    <string name="settings_rate_impossible">Impossible to find Google play, please install it!</string>
    <string name="settings_help_scramble_dialog_title">Help for scrambles</string>
    <string name="settings_help_scramble_dialog_2x2_3x3">For scrambling cubes,
        you always need to have the green face facing you and the white face
        above. Here are the meaning of each notations used :
        \n\n<b>R, L, F, B, U, D</b> indicates which face to turn :
        \n<b>R : R</b>ight face.
        \n<b>L : L</b>eft face.
        \n<b>F : F</b>ront face.
        \n<b>B : B</b>ack face.
        \n<b>U : U</b>p face.
        \n<b>D : D</b>own face.
        \n\n<b>2, \'</b> indicates how to turn them :
        \nan alone letter means to do a clockwise quarter turn.
        \n<b>\'</b> means to do a counterclockwise quarter turn.
        \n<b>2</b> means to do a half turn.
        \n\nSo, for example <b>L\'</b> means to do a quarter turn counterclockwise of the left face.</string>
    <string name="settings_help_scramble_dialog_4x4_5x5">For scrambling big cubes like 4x4 and 5x5,
        it\'s the same as 2x2 or 3x3 but single letters
        means to turn the external layer, and when the letter is followed by a <b>w</b>, you have
        have to turn both external and internal layer of the face.
        \n\nSo, for example <b>Fw2</b> means to do a half turn of both front layers.
    </string>
    <string name="settings_help_scramble_dialog_6x6_7x7">For scrambling big cubes like 6x6 and 7x7,
        it\'s the same as 4x4 or 5x5 but letters
        followed by a <b>w</b> and preceded by a <b>3</b> means to turn the 3
        external layers.
        \n\nSo, for example <b>3Uw\'</b>
        means to do a quarter turn counterclockwise of the 3 up layers.
    </string>
    <string name="settings_help_scramble_dialog_square1">For scrambling square-1,
        you always need to have the 2 \'bars\' horizontal in order to
        have a small piece at the left of the middle layer of the front face.
        \n\nThen, a <b>/</b> means to do half a turn of the right block,
        this move is called \'slice\'.
        between the 2 parentheses, there is 2 numbers :
        \n- The first one is the number of 30° clockwise turns of the top face.
        \n- The second one is the number of 30° clockwise turns of the down face.
        \nSo a negative number means to turn counterclockwise.
        \n\nFor example, <b>(3,-1) /</b> means to turn the top face 90° (a quarter turn) clockwise
        and the down face 30° counterclockwise. Then, do a slice.
    </string>
    <string name="settings_help_scramble_dialog_skewb">For scrambling skewb,
        you always need to take it with the white-green-red corner facing
        you, in order to have white face above, green face left and red face right.
        \nHere are the meaning of each notations used :
        \n\n<b>R, L, B, U</b> indicates which angle to turn,
        \n<b>R</b> : Lower right corner (blue-red-yellow).
        \n<b>L</b> : Lower left corner (orange-green-yellow).
        \n<b>B</b> : Back corner (blue-orange-yellow).
        \n<b>U</b> : Up corner (white-orange-blue).
        \n\nIf the letter is alone, you have to do the turn clockwise, if it\'s followed by
        <b>\'</b>, you have to do the turn counterclockwise.
        \n\nSo, for example <b>L\'</b> means to turn the lower left corner counterclockwise.
    </string>
    <string name="dialog_edit_event_title">Event</string>
    <string name="dialog_edit_event_name_desc">Change name :</string>
    <string name="dialog_edit_event_name_hint">New name</string>
    <string name="dialog_edit_event_scramble_desc">Change scramble type :</string>
    <string name="timelist_add_title">Add time manually</string>
    <string name="timelist_add_insert_desc">Insert time :</string>
    <string name="timelist_add_min">Min</string>
    <string name="timelist_add_sec">Sec</string>
    <string name="timelist_add_mil">Mil</string>
    <string name="timelist_detail_title">Time details</string>
    <string name="timelist_detail_event"><u>Event</u> :</string>
    <string name="timelist_detail_single"><u>Time</u> :</string>
    <string name="timelist_detail_mo3" translatable="false"><u>Mo3</u> :</string>
    <string name="timelist_detail_avg5" translatable="false"><u>Avg5</u> :</string>
    <string name="timelist_detail_avg12" translatable="false"><u>Avg12</u> :</string>
    <string name="timelist_detail_mo50" translatable="false"><u>Mo50</u> :</string>
    <string name="timelist_detail_mo100" translatable="false"><u>Mo100</u> :</string>
    <string name="timelist_detail_scramble"><u>Scramble</u> :</string>
    <string name="timelist_detail_date"><u>Date</u> :</string>
    <string name="timelist_detail_penalty" translatable="false"><u>Penalty</u> :</string>
    <string name="timelist_detail_penalty_no">No penalty</string>
    <string name="timelist_detail_penalty_2" translatable="false">+2</string>
    <string name="timelist_detail_penalty_dnf" translatable="false">DNF</string>
</resources>