<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/onboarding_message_content_margin"
    android:background="@color/transparent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_step5_access_title1"
        style="@style/OnboardingTitleTextViewStyle"/>

    <letsapps.com.letscube.view.SpectreView
        android:id="@+id/spectre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/onboarding_step5_access_title2"
        style="@style/OnboardingTitleTextViewStyle"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#4FFF">

        <RadioGroup
            android:id="@+id/radios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radio_youtube"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:text="@string/onboarding_step5_access_desc20"/>

            <RadioButton
                android:id="@+id/radio_forum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:text="@string/onboarding_step5_access_desc21"/>

            <RadioButton
                android:id="@+id/radio_acquaintance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:text="@string/onboarding_step5_access_desc22"/>

            <RadioButton
                android:id="@+id/radio_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:text="@string/onboarding_step5_access_desc23"/>

            <RadioButton
                android:id="@+id/radio_other"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="18dp"
                android:text="@string/onboarding_step5_access_desc24"/>

            <EditText
                android:visibility="gone"
                android:id="@+id/radio_other_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="..."
                android:lines="1"
                android:textColor="@color/white"
                android:textColorHint="#6FFF"/>

        </RadioGroup>

    </RelativeLayout>

</LinearLayout>