<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:letscube="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <letsapps.com.letscube.view.dialog.ViewDialogTitle
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        letscube:dialog_title="@string/dialog_edit_event_title"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_edit_event_name_desc"/>

        <EditText
            android:id="@+id/event_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:hint="@string/dialog_edit_event_name_hint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/dialog_edit_event_scramble_desc"/>

        <letsapps.com.letscube.view.ScrambleTypePicker
            android:id="@+id/scramble_type"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="8dp"/>

    </LinearLayout>

</LinearLayout>