<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:letscube="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <letsapps.com.letscube.view.dialog.ViewDialogTitle
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        letscube:dialog_title="@string/settings_contact_dialog_title"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/settings_contact_dialog_desc"/>

    <EditText
        android:id="@+id/contact_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:maxLength="250"
        android:hint="@string/settings_contact_dialog_hint"/>

</LinearLayout>